--- a/kernel/kernel.vcxproj.filters
+++ b/kernel/kernel.vcxproj.filters
@@ -2,40 +2,40 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Исходные файлы">
-	  <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="Файлы заголовков">
-	  <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
     <Filter Include="Файлы ресурсов">
-	  <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="Исходные файлы\std">
-	  <UniqueIdentifier>{6455a9c7-d02a-4c5f-bbc1-d8aa25b49389}</UniqueIdentifier>
+      <UniqueIdentifier>{6455a9c7-d02a-4c5f-bbc1-d8aa25b49389}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\driver">
-	  <UniqueIdentifier>{17ae28ec-bc7c-439e-97a8-43d2c7be5e1e}</UniqueIdentifier>
+      <UniqueIdentifier>{17ae28ec-bc7c-439e-97a8-43d2c7be5e1e}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\memory">
-	  <UniqueIdentifier>{c9c01d0d-e23f-45ea-bebf-b71cbb1eddfd}</UniqueIdentifier>
+      <UniqueIdentifier>{c9c01d0d-e23f-45ea-bebf-b71cbb1eddfd}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\glm">
-	  <UniqueIdentifier>{5f2318e2-a401-4b5b-8b32-93904050d461}</UniqueIdentifier>
+      <UniqueIdentifier>{5f2318e2-a401-4b5b-8b32-93904050d461}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\SMBIOS">
-	  <UniqueIdentifier>{078ed1ed-6fef-436f-a83b-bdb78a1d6abc}</UniqueIdentifier>
+      <UniqueIdentifier>{078ed1ed-6fef-436f-a83b-bdb78a1d6abc}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\vfs">
-	  <UniqueIdentifier>{8d1f0272-abb6-47cb-bc1b-d5d86937e2b9}</UniqueIdentifier>
+      <UniqueIdentifier>{8d1f0272-abb6-47cb-bc1b-d5d86937e2b9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\fs">
-	  <UniqueIdentifier>{1f010baf-6d2d-41ba-9da1-03497bf37088}</UniqueIdentifier>
+      <UniqueIdentifier>{1f010baf-6d2d-41ba-9da1-03497bf37088}</UniqueIdentifier>
     </Filter>
     <Filter Include="Исходные файлы\fs\exFAT">
-	  <UniqueIdentifier>{1f52f8cf-d18c-4916-8de3-5d460eb1ccf2}</UniqueIdentifier>
+      <UniqueIdentifier>{1f52f8cf-d18c-4916-8de3-5d460eb1ccf2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -322,5 +322,8 @@
     <ClInclude Include="vadefs.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="zap-ext-vga16.psf" />
   </ItemGroup>
 </Project>
