add PE loader kernel

--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -18,8 +18,17 @@
     <ClCompile Include="efi_main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\kernel\PE.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\kernel\types.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.vbs" />
+    <None Include="kernelTrampoline.asm">
+      <Filter>Исходные файлы</Filter>
+    </None>
   </ItemGroup>
 </Project>
