--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -146,10 +146,16 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\kernel\PE.ixx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\kernel\types.ixx" />
     <ClCompile Include="efi_main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.vbs" />
+    <None Include="kernelTrampoline.asm" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\uefilib\uefilib.vcxproj">
